# Eumexxx

FastAPI Project/: frontend.py  main.py  pyproject.toml
FastAPI Project/app/: app.py  db.py  schemas.py
FastAPI Project/frontend/: index.html  package-lock.json
FastAPI Project/frontend/src/: App.jsx  api.js  utils.js
FastAPI Project/frontend/src/components/: Avatar.jsx  CommentSection.jsx  Navbar.jsx  PostCard.jsx  UploadPanel.jsx
FastAPI Project/frontend/src/hooks/: useDarkMode.js
FastAPI Project/frontend/src/pages/: AuthPage.jsx  MainPage.jsx
FastAPI Tutorial/: frontend.py  main.py  pyproject.toml
FastAPI Tutorial/app/: db.py  s3.py  schemas.py  users.py
Google Clone/: index.html  index.js  main.css
Movie Booking System Project/: login3.txt  movie_booking
